update urls in share

--- a/src/popup.html
+++ b/src/popup.html
@@ -12,7 +12,7 @@
 				font-family: sans-serif;
 				font-size: 16px;
 				line-height: 1.5;
-        font-family: Poppins, sans-serif;
+				font-family: Poppins, sans-serif;
 			}
 
 			.container {
@@ -29,7 +29,7 @@
 				justify-content: space-between;
 				align-items: center;
 				/* purple */
-				background-color:royalblue;
+				background-color: royalblue;
 				color: #fff;
 				padding: 1rem;
 			}
@@ -143,9 +143,8 @@
 				display: inline-block;
 				vertical-align: middle;
 				cursor: pointer;
-        margin-right: 2rem;
+				margin-right: 2rem;
 			}
-
 
 			.form-range {
 				width: 100%;
@@ -228,11 +227,11 @@
 				box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
 			}
 
-      .options-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 0.5rem;
-      }
+			.options-grid {
+				display: grid;
+				grid-template-columns: 1fr 1fr;
+				grid-gap: 0.5rem;
+			}
 
 			.button {
 				display: inline-block;
@@ -280,12 +279,12 @@
 
 			.bmc-btn {
 				font-size: 1rem !important;
-        height: unset !important;
+				height: unset !important;
 				padding: 5px 24px !important;
 			}
-      .bmc-btn:hover {
-        opacity: 0.85 !important;
-      }
+			.bmc-btn:hover {
+				opacity: 0.85 !important;
+			}
 			.row {
 				display: flex;
 				justify-content: space-around;
@@ -456,15 +455,24 @@
 			</div>
 
 			<div class="row">
-        <a
-        class="github-button"
-        href="https://github.com/alganzory/HumanBlur"
-        data-size="large"
-        aria-label="Star HumanBlur on GitHub"
-        >Star</a
-      >
 				<a
-					href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fgithub.com%2Falganzory&amp;linkname=HumanBlur"
+					class="github-button"
+					href="https://github.com/alganzory/HumanBlur"
+					data-size="large"
+					aria-label="Star HumanBlur on GitHub"
+					>Star</a
+				>
+				<a
+					href="https://www.addtoany.com/share#url=https%3A%2F%2Fgithub.com%2Falganzory%2FHumanBlur&amp;title=HumanBlur%20Extension"
+					target="_blank"
+					><img
+						src="https://static.addtoany.com/buttons/a2a.svg"
+						width="28"
+						height="28"
+						style="background-color: royalblue"
+				/></a>
+				<a
+					href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fgithub.com%2Falganzory%2FHumanBlur&amp;linkname=HumanBlur%20Extension"
 					target="_blank"
 					><img
 						src="https://static.addtoany.com/buttons/facebook.svg"
@@ -473,7 +481,7 @@
 						style="background-color: royalblue"
 				/></a>
 				<a
-					href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fgithub.com%2Falganzory&amp;linkname=HumanBlur"
+					href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fgithub.com%2Falganzory%2FHumanBlur&amp;linkname=HumanBlur%20Extension"
 					target="_blank"
 					><img
 						src="https://static.addtoany.com/buttons/twitter.svg"
@@ -482,7 +490,7 @@
 						style="background-color: royalblue"
 				/></a>
 				<a
-					href="https://www.addtoany.com/add_to/linkedin?linkurl=https%3A%2F%2Fgithub.com%2Falganzory&amp;linkname=HumanBlur"
+					href="https://www.addtoany.com/add_to/linkedin?linkurl=https%3A%2F%2Fgithub.com%2Falganzory%2FHumanBlur&amp;linkname=HumanBlur%20Extension"
 					target="_blank"
 					><img
 						src="https://static.addtoany.com/buttons/linkedin.svg"
@@ -491,7 +499,7 @@
 						style="background-color: royalblue"
 				/></a>
 				<a
-					href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fgithub.com%2Falganzory&amp;linkname=HumanBlur"
+					href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fgithub.com%2Falganzory%2FHumanBlur&amp;linkname=HumanBlur%20Extension"
 					target="_blank"
 					><img
 						src="https://static.addtoany.com/buttons/whatsapp.svg"
@@ -500,7 +508,7 @@
 						style="background-color: royalblue"
 				/></a>
 				<a
-					href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fgithub.com%2Falganzory&amp;linkname=HumanBlur"
+					href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fgithub.com%2Falganzory%2FHumanBlur&amp;linkname=HumanBlur%20Extension"
 					target="_blank"
 					><img
 						src="https://static.addtoany.com/buttons/telegram.svg"
