implement blurry start mode

--- a/src/popup.html
+++ b/src/popup.html
@@ -18,7 +18,6 @@
 			.container {
 				width: 20vw;
 				min-width: 300px;
-				min-height: 450px;
 				margin: 0 auto;
 				padding: 1rem 2rem;
 				/* overflow-y: scroll; */
@@ -45,6 +44,10 @@
 				display: inline-block;
 				width: 60px;
 				height: 34px;
+			}
+			.switch.small {
+				width: 50px;
+				height: 28px;
 			}
 
 			.switch input {
@@ -77,6 +80,11 @@
 				transition: 0.4s;
 			}
 
+			.slider.small::before {
+				height: 20px;
+				width: 20px;
+			}
+
 			input:checked + .slider {
 				background-color: #2196f3;
 			}
@@ -86,9 +94,9 @@
 			}
 
 			input:checked + .slider:before {
-				-webkit-transform: translateX(26px);
-				-ms-transform: translateX(26px);
-				transform: translateX(26px);
+				-webkit-transform: translateX(100%);
+				-ms-transform: translateX(100%);
+				transform: translateX(100%);
 			}
 
 			.form-checkbox {
@@ -269,10 +277,9 @@
 
 			.footer {
 				background-color: #edf2f7;
-				position: fixed;
+				position: sticky;
 				bottom: 0;
 				left: 0;
-
 				width: 100%;
 				padding: 1rem 0 0 0;
 			}
@@ -292,8 +299,40 @@
 				margin-bottom: 1rem;
 			}
 
+			.space-between {
+				justify-content: space-between;
+			}
+
 			.hidden {
 				display: none;
+			}
+
+			.tooltip {
+				position: relative;
+				display: inline-block;
+			}
+
+			.tooltip .tooltiptext {
+				visibility: hidden;
+				width: 200px;
+				background-color: #555;
+				color: #fff;
+				text-align: left;
+				border-radius: 6px;
+				padding: 5px;
+				position: absolute;
+				z-index: 1;
+				bottom: 125%;
+				left: 100%;
+				margin-left: -60px;
+				transition: opacity 0.3s;
+				font-size: 0.8rem;
+				opacity: 0;
+			}
+
+			.tooltip:hover .tooltiptext {
+				visibility: visible;
+				opacity: 0.8;
 			}
 
 			.refresh {
@@ -326,6 +365,36 @@
 		</div>
 		<div class="container" id="container">
 			<h2>Settings</h2>
+			<!-- blurryStart mode setting toggle switch -->
+			<div class="mb-2">
+				<div class="row space-between">
+					<label for="blurryStart-mode"
+						>Blur on page load
+						<!-- i icon tooltip -->
+						<span class="tooltip">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								height="1em"
+								viewBox="0 0 512 512"
+							>
+								<path
+									fill="#2196f3"
+									d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
+								/>
+							</svg>
+							<span class="tooltiptext">
+								When enabled, all images and videos will be
+								blurred on page load until detection starts.
+							</span>
+						</span>
+					</label>
+					<label class="switch small">
+						<input name="blurryStartMode" type="checkbox" />
+						<span class="slider small"></span>
+					</label>
+				</div>
+			</div>
+			<!-- blur amount setting slider -->
 			<div class="mb-2">
 				<label for="blur-amount"
 					>Blur amount:
@@ -447,7 +516,7 @@
 					data-color="#FFDD00"
 					data-emoji=""
 					data-font="Poppins"
-					data-text="Buy me a coffee"
+					data-text="Support this Project"
 					data-outline-color="#000000"
 					data-font-color="#000000"
 					data-coffee-color="#ffffff"
