Change name and other modifications

--- a/src/popup.html
+++ b/src/popup.html
@@ -357,7 +357,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<h1>HumanBlur Extension</h1>
+			<h1>HaramBlur Extension</h1>
 			<label class="switch">
 				<input name="status" type="checkbox" />
 				<span class="slider"></span>
@@ -526,65 +526,18 @@
 			<div class="row">
 				<a
 					class="github-button"
-					href="https://github.com/alganzory/HumanBlur"
+					href="https://github.com/alganzory/HaramBlur"
 					data-size="large"
-					aria-label="Star HumanBlur on GitHub"
+					aria-label="Star HaramBlur on GitHub"
 					>Star</a
 				>
-				<a
-					href="https://www.addtoany.com/share#url=https%3A%2F%2Fgithub.com%2Falganzory%2FHumanBlur&amp;title=HumanBlur%20Extension"
-					target="_blank"
-					><img
-						src="https://static.addtoany.com/buttons/a2a.svg"
-						width="28"
-						height="28"
-						style="background-color: royalblue"
-				/></a>
-				<a
-					href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fgithub.com%2Falganzory%2FHumanBlur&amp;linkname=HumanBlur%20Extension"
-					target="_blank"
-					><img
-						src="https://static.addtoany.com/buttons/facebook.svg"
-						width="28"
-						height="28"
-						style="background-color: royalblue"
-				/></a>
-				<a
-					href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fgithub.com%2Falganzory%2FHumanBlur&amp;linkname=HumanBlur%20Extension"
-					target="_blank"
-					><img
-						src="https://static.addtoany.com/buttons/twitter.svg"
-						width="28"
-						height="28"
-						style="background-color: royalblue"
-				/></a>
-				<a
-					href="https://www.addtoany.com/add_to/linkedin?linkurl=https%3A%2F%2Fgithub.com%2Falganzory%2FHumanBlur&amp;linkname=HumanBlur%20Extension"
-					target="_blank"
-					><img
-						src="https://static.addtoany.com/buttons/linkedin.svg"
-						width="28"
-						height="28"
-						style="background-color: royalblue"
-				/></a>
-				<a
-					href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fgithub.com%2Falganzory%2FHumanBlur&amp;linkname=HumanBlur%20Extension"
-					target="_blank"
-					><img
-						src="https://static.addtoany.com/buttons/whatsapp.svg"
-						width="28"
-						height="28"
-						style="background-color: royalblue"
-				/></a>
-				<a
-					href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fgithub.com%2Falganzory%2FHumanBlur&amp;linkname=HumanBlur%20Extension"
-					target="_blank"
-					><img
-						src="https://static.addtoany.com/buttons/telegram.svg"
-						width="28"
-						height="28"
-						style="background-color: royalblue"
-				/></a>
+				<a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension" target="_blank"><img src="https://static.addtoany.com/buttons/facebook.svg" width="28" height="28" style="background-color:royalblue"></a>
+				<a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension" target="_blank"><img src="https://static.addtoany.com/buttons/twitter.svg" width="28" height="28" style="background-color:royalblue"></a>
+				<a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension" target="_blank"><img src="https://static.addtoany.com/buttons/whatsapp.svg" width="28" height="28" style="background-color:royalblue"></a>
+				<a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension" target="_blank"><img src="https://static.addtoany.com/buttons/telegram.svg" width="28" height="28" style="background-color:royalblue"></a>
+				<a href="https://www.addtoany.com/add_to/linkedin?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension" target="_blank"><img src="https://static.addtoany.com/buttons/linkedin.svg" width="28" height="28" style="background-color:royalblue"></a>
+				<a href="https://www.addtoany.com/add_to/reddit?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension" target="_blank"><img src="https://static.addtoany.com/buttons/reddit.svg" width="28" height="28" style="background-color:royalblue"></a>
+				
 			</div>
 		</div>
 	</body>
