--- a/src/popup.html
+++ b/src/popup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Blur Extension</title>
+		<title>HaramBlur Extension</title>
 		<script src="popup.js"></script>
 		<script async defer src="./assets/github-button.js"></script>
 		<style>
@@ -13,13 +13,14 @@
 				font-size: 16px;
 				line-height: 1.5;
 				font-family: Poppins, sans-serif;
+				margin: 0;
 			}
 
 			.container {
 				width: 20vw;
 				min-width: 300px;
 				margin: 0 auto;
-				padding: 1rem 2rem;
+				padding: 0.5rem 2rem;
 				/* overflow-y: scroll; */
 			}
 
@@ -27,10 +28,11 @@
 				display: flex;
 				justify-content: space-between;
 				align-items: center;
-				/* purple */
 				background-color: royalblue;
 				color: #fff;
 				padding: 1rem;
+				position: sticky;
+				top: 0;
 			}
 
 			.header h1 {
@@ -281,7 +283,7 @@
 				bottom: 0;
 				left: 0;
 				width: 100%;
-				padding: 1rem 0 0 0;
+				padding: 1rem 0 0.5rem 0;
 			}
 
 			.bmc-btn {
@@ -296,7 +298,6 @@
 				display: flex;
 				justify-content: space-around;
 				align-items: center;
-				margin-bottom: 1rem;
 			}
 
 			.space-between {
@@ -350,6 +351,10 @@
 			.mt-4 {
 				margin-top: 1rem;
 			}
+
+			.mt--4{ 
+				margin-top: -1.5rem;
+			}
 			.mb-4 {
 				margin-bottom: 1rem;
 			}
@@ -364,7 +369,14 @@
 			</label>
 		</div>
 		<div class="container" id="container">
-			<h2>Settings</h2>
+			<div class="mb-4">
+				<h2>Settings</h2>
+				<!-- refresh to see changes -->
+				<div class="hidden mt--4  refresh" id="refresh-message">
+					Refresh the page to see changes.
+				</div>
+			</div>
+
 			<!-- blurryStart mode setting toggle switch -->
 			<div class="mb-2">
 				<div class="row space-between">
@@ -410,6 +422,24 @@
 					class="form-range"
 				/>
 			</div>
+			<!-- strictness slider -->
+			<div class="mb-2">
+				<label for="blur-amount"
+					>Strictness:
+					<span id="strictness-value">30%</span>
+				</label>
+				<input
+					type="range"
+					id="strictness"
+					name="strictness"
+					min="0.1"
+					max="1"
+					value="0.5"
+					step="0.1"
+					class="form-range"
+				/>
+			</div>
+
 			<div class="mb-2">
 				<label
 					>Media to Blur
@@ -489,25 +519,10 @@
 					</label>
 				</div>
 			</div>
-			<!-- refresh to see changes -->
-			<div class="hidden mt-4 refresh" id="refresh-message">
-				Refresh the page to see changes.
-			</div>
-
-			<!-- <div id="advanced-settings">
-        <h2>Advanced Settings</h2>
-        <div>
-          <label for="detection-sensitivity">Detection Sensitivity:</label>
-          <input type="range" id="detection-sensitivity" name="detection-sensitivity" min="0" max="100" value="50" class="form-range">
-        </div>
-        <div>
-          <button class="button button-secondary" id="reset-settings">Reset Settings</button>
-        </div>
-      </div> -->
 		</div>
 		<div class="footer">
 			<!-- 3 buttons/links 1- share 2- github 3- support -->
-			<div class="row">
+			<div class="row mb-4">
 				<script
 					type="text/javascript"
 					src="./assets/buymeacoffee.min.js"
@@ -531,13 +546,60 @@
 					aria-label="Star HaramBlur on GitHub"
 					>Star</a
 				>
-				<a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension" target="_blank"><img src="https://static.addtoany.com/buttons/facebook.svg" width="28" height="28" style="background-color:royalblue"></a>
-				<a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension" target="_blank"><img src="https://static.addtoany.com/buttons/twitter.svg" width="28" height="28" style="background-color:royalblue"></a>
-				<a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension" target="_blank"><img src="https://static.addtoany.com/buttons/whatsapp.svg" width="28" height="28" style="background-color:royalblue"></a>
-				<a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension" target="_blank"><img src="https://static.addtoany.com/buttons/telegram.svg" width="28" height="28" style="background-color:royalblue"></a>
-				<a href="https://www.addtoany.com/add_to/linkedin?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension" target="_blank"><img src="https://static.addtoany.com/buttons/linkedin.svg" width="28" height="28" style="background-color:royalblue"></a>
-				<a href="https://www.addtoany.com/add_to/reddit?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension" target="_blank"><img src="https://static.addtoany.com/buttons/reddit.svg" width="28" height="28" style="background-color:royalblue"></a>
-				
+				<a
+					href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension"
+					target="_blank"
+					><img
+						src="https://static.addtoany.com/buttons/facebook.svg"
+						width="28"
+						height="28"
+						style="background-color: royalblue"
+				/></a>
+				<a
+					href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension"
+					target="_blank"
+					><img
+						src="https://static.addtoany.com/buttons/twitter.svg"
+						width="28"
+						height="28"
+						style="background-color: royalblue"
+				/></a>
+				<a
+					href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension"
+					target="_blank"
+					><img
+						src="https://static.addtoany.com/buttons/whatsapp.svg"
+						width="28"
+						height="28"
+						style="background-color: royalblue"
+				/></a>
+				<a
+					href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension"
+					target="_blank"
+					><img
+						src="https://static.addtoany.com/buttons/telegram.svg"
+						width="28"
+						height="28"
+						style="background-color: royalblue"
+				/></a>
+				<a
+					href="https://www.addtoany.com/add_to/linkedin?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension"
+					target="_blank"
+					><img
+						src="https://static.addtoany.com/buttons/linkedin.svg"
+						width="28"
+						height="28"
+						style="background-color: royalblue"
+				/></a>
+				<a
+					href="https://www.addtoany.com/add_to/reddit?linkurl=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fharamblur%2Fpbcoegikffnadpahojjhgdladmmddeji&amp;linkname=Download%20HaramBlur%20Extension"
+					target="_blank"
+					><img
+						src="https://static.addtoany.com/buttons/reddit.svg"
+						width="28"
+						height="28"
+						style="background-color: royalblue"
+				/></a>
 			</div>
 		</div>
 	</body>
