fix blurry start mode

--- a/src/popup.html
+++ b/src/popup.html
@@ -390,7 +390,7 @@
 			<div class="mb-2">
 				<div class="row space-between">
 					<label for="blurryStart-mode"
-						>Blur on page load
+						>Blur media on load:
 						<!-- i icon tooltip -->
 						<span class="tooltip">
 							<svg
@@ -405,7 +405,7 @@
 							</svg>
 							<span class="tooltiptext">
 								When enabled, all images and videos will be
-								blurred on page load until detection starts.
+								blurred by default until detection starts.
 							</span>
 						</span>
 					</label>
