multilingual-arabic added

--- a/src/popup.html
+++ b/src/popup.html
@@ -385,7 +385,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<h1 id="title" >HaramBlur Extensionst</h1>
+			<h1 id="title" >HaramBlur Extension</h1>
 			<label for="language" class="hidden">Select Language:</label>
 			<select id="language">
 				<option value="eng">🇬🇧 English</option>
