image and video working

--- a/src/offscreen.html
+++ b/src/offscreen.html
@@ -1,3 +1,5 @@
-
+<!DOCTYPE html>
 <script src="../tfjs/human.js"></script>
+<script src="background.js" type="module"></script>
 <script src="offscreen.js" type="module"></script>
+
