Turkish language support + css tweaks

--- a/src/popup.html
+++ b/src/popup.html
@@ -390,7 +390,7 @@
 
 			.tooltip:hover .tooltiptext {
 				visibility: visible;
-				opacity: 0.8;
+				opacity: 0.9;
 			}
 
 			.refresh {
@@ -471,6 +471,9 @@
 					<option value="ar">
 						العربية
 					</option>
+					<option value="tr">
+						Türkçe
+					</option>
 				</select>
 			</div>
 			<h1>HaramBlur</h1>
@@ -493,8 +496,8 @@
 			<!-- blurryStart mode setting toggle switch -->
 			<div class="mb-4">
 				<div class="row space-between">
-					<label for="blurryStart-mode" id="blurryStart"
-						>Blur media on load:
+					<label for="blurryStart-mode"> 
+						<span id="blurryStart"> Blur media on load: </span>
 						<!-- i icon tooltip -->
 						<span class="tooltip">
 							<svg
